--- a/src/pages/LandingPages/AboutUs/index.css
+++ b/src/pages/LandingPages/AboutUs/index.css
@@ -112,3 +112,6 @@
   }
   
 }
+.g_img{
+  background: linear-gradient(195deg, rgba(25, 25, 25, 0.8), rgba(25, 25, 25, 0.8)) center center / cover, url(assets/images/bg-about-us.jpg) transparent;
+}
