--- a/src/pages/LandingPages/AboutUs/sections/visit.css
+++ b/src/pages/LandingPages/AboutUs/sections/visit.css
@@ -4,6 +4,7 @@
   flex-direction: row !important;
   align-items: center !important;
   justify-content: center !important;
+  background: linear-gradient(195deg, rgba(25, 25, 25, 0.8), rgba(25, 25, 25, 0.8)) center center / cover, url(assets/images/13.jpg) transparent;
 }
 .white_visit{
   background: #7b809a26;
