--- a/src/pages/LandingPages/AboutUs/sections/Team.css
+++ b/src/pages/LandingPages/AboutUs/sections/Team.css
@@ -10,8 +10,20 @@
   box-shadow: 0 0 1px 3px gray !important;
 }
 .rec-arrow {
-  background-color: rgba(255, 255, 255, 0.712) !important;
+  background-color: rgba(255, 255, 255, 0.0) !important;
+  width: 25px !important;
+  box-shadow: none !important;
+}
+.rec-arrow:hover {
+  background-color: rgb(136, 136, 136, 0.0) !important;
 }
 .padding_top {
   padding-top: 10px;
+}
+
+@media screen and (max-width: 450px){
+  .wider {
+    width: 115% !important;
+    margin-inline-start: -7% !important;
+  }
 }
