--- a/src/pages/LandingPages/AboutUs/index.css
+++ b/src/pages/LandingPages/AboutUs/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Almendra:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Almendra:ital,wght@0,400;0,700;1,400;1,700&family=Special+Elite&display=swap');
+
 .LogoImage {
   width: 30%;
 }
@@ -30,10 +33,13 @@
   /* font-weight: bold; */
 }
 .gradtxt{
-  background: -webkit-linear-gradient(90deg, #f43a01, #f6be5a) !important;
+  background-image: url("../../../assets/images/illustrations/bg1.jpg") !important;
+  background-position: left;
+  background-size: contain;
   background-clip: text !important;
   -webkit-background-clip: text !important;
   -webkit-text-fill-color: transparent !important;
+  letter-spacing: 4px;
 }
 .mb{
   margin: 40px !important;
@@ -114,4 +120,148 @@
 }
 .g_img{
   background: linear-gradient(195deg, rgba(25, 25, 25, 0.8), rgba(25, 25, 25, 0.8)) center center / cover, url(assets/images/bg-about-us.jpg) transparent;
+}
+
+
+.whole{
+  margin: 0px !important;
+  padding: 0px !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(223, 223, 223);
+}
+.transparent{
+  backdrop-filter: blur(2px) !important;
+  background: transparent !important;
+}
+.pos{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100vw !important;
+  z-index: 3;
+}
+
+.font{
+  font-family: "Almendra", serif !important;
+  font-size: 6vw !important;
+  /* font-style: italic !important; */
+}
+.font-2{
+  font-family: "Special Elite", system-ui !important;
+  font-size: 6vw !important;
+  /* font-style: italic !important; */
+}
+
+.promo{
+    width: auto !important;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 0px;
+    z-index: 2;
+    padding: 15px;
+    border-radius: 35px;
+}
+.mar{
+  margin-block-start: -10px !important;
+}
+
+.width {
+    max-width: 450px;
+    min-width: 450px;
+}
+
+.body{
+  display: flex;
+  flex-direction: column;
+  width: 95vw;
+  height: auto !important;
+  margin-block-start: -5vh;
+  background-image: url("../../../assets/images/illustrations/bg.jpg") !important;
+  background-position: center !important;
+  background-size: contain !important;
+  border-radius: 20px;
+  z-index: 3;
+}
+.ill1{
+  width: 300px;
+  height: 300px;
+  background-image: url("../../../assets/images/illustrations/ill3.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  z-index: 4;
+  position: absolute;
+  top: 145vh;
+  left: 20vw;
+  rotate: -30deg;
+  opacity: 0.1;
+}
+.ill2{
+  width: 300px;
+  height: 300px;
+  background-image: url("../../../assets/images/illustrations/ill2.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 4;
+  background-size: contain;
+  position: absolute;
+  top: 70vh;
+  right: 1vw;
+  rotate: 33deg;
+  opacity: 0.4;
+}
+.ill3{
+  width: 300px;
+  height: 300px;
+  background-image: url("../../../assets/images/illustrations/ill1.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  z-index: 4;
+  position: absolute;
+  top: 90vh;
+  left: 0px;
+  rotate: -19deg;
+  opacity: 0.3;
+}
+.bg-cover{
+  width: 100vw;
+  height: 93vh;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background-image: url("../../../assets/images/illustrations/bg2.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  opacity: 0;
+}
+
+@media screen and (max-width: 735px) {
+  .ill3 {
+    top: 200vh !important;
+  }
+  
+  .ill1 {
+    top: 110vh !important;
+  }
+}
+@media screen and (max-width: 500px) {
+  .promo {
+    align-items: flex-start !important;
+    backdrop-filter: blur(80px) !important;
+  }
+  .font{
+    font-size: 12vw !important;
+  }
+  .font-2{
+    font-size: 12vw !important;
+  }
+  .ill2 {
+    display: none !important;
+  }
 }
