--- a/src/pages/LandingPages/AboutUs/index.css
+++ b/src/pages/LandingPages/AboutUs/index.css
@@ -33,7 +33,8 @@
   /* font-weight: bold; */
 }
 .gradtxt{
-  background-image: url("../../../assets/images/illustrations/bg1.jpg") !important;
+  /* background-image: url("../../../assets/images/illustrations/bg1.jpg") !important; */
+  background-color: white !important;
   background-position: left;
   background-size: contain;
   background-clip: text !important;
@@ -141,6 +142,13 @@
   left: 0px;
   width: 100vw !important;
   z-index: 3;
+  background-color: #00000085 !important;
+}
+
+.pos > div > div > div > a {
+  backdrop-filter: blur(12px) !important;
+  border-radius: 10px !important;
+  padding: 0px !important;
 }
 
 .font{
@@ -238,7 +246,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  opacity: 0;
+  opacity: 0.3;
 }
 
 @media screen and (max-width: 735px) {
@@ -253,7 +261,6 @@
 @media screen and (max-width: 500px) {
   .promo {
     align-items: flex-start !important;
-    backdrop-filter: blur(80px) !important;
   }
   .font{
     font-size: 12vw !important;
